# create_autonomy

./: .travis.yml  README.md  remote.repos  rpi.repos
ca_bringup/launch/: minimal.launch
ca_dashboard/: CMakeLists.txt  package.xml
ca_dashboard/launch/: dashboard.launch
ca_dashboard/scripts/: create_dashboard
ca_description/launch/: create_description.launch
ca_description/urdf/: common_properties.xacro  create_2.xacro  create_base.xacro  create_base_gazebo.xacro  create_caster_wheel.xacro
ca_description/urdf/sensors/: cliff_sensors.xacro  cliff_sensors_gazebo.xacro  omni_sensor.xacro  virtual_wall_sensor.xacro  virtual_wall_sensor_gazebo.xacro  wall_sensor.xacro
ca_description/urdf/sensors/lasers/: rplidar.xacro
ca_driver/config/: default.yaml
ca_driver/include/create_driver/: create_driver.h
ca_driver/launch/: calibrate.launch
ca_driver/scripts/: calibrate.py  scan_to_angle.py
ca_driver/src/: create_driver.cpp
ca_gazebo/: CMakeLists.txt  package.xml
ca_gazebo/include/ca_gazebo/: cliff_msg_publisher.h  create_cliff_plugin.h  create_virtual_wall_plugin.hh  virtual_wall_detector.h
ca_gazebo/launch/: create_cave.launch  create_cooperative_two_rooms.launch  create_empty_world.launch  create_tunnel_qual.launch  create_two_floors_house.launch  create_virtual_wall.launch  spawn_create.launch  spawn_multirobot.launch  spawn_virtual_wall.launch
ca_gazebo/launch/include/: spawn_virtual_wall.launch
ca_gazebo/models/two_floors_house/: model.config
ca_gazebo/models/virtual_wall/: model.config  model.sdf
ca_gazebo/src/: cliff_msg_publisher.cpp  create_cliff_plugin.cpp  create_virtual_wall_plugin.cpp  virtual_wall_detector.cpp
ca_gazebo/worlds/: two_rooms.world
ca_msgs/: CMakeLists.txt
ca_navigation/ca_move_base/launch/: navigate.launch
ca_node/: CMakeLists.txt
ca_node/scripts/: smach_ranking_controller.py
ca_tools/launch/: keyboard_teleop.launch
ca_tools/rviz/: camera3d.rviz  cartographer.rviz  config.rviz  navigation.rviz  tf.rviz  visual_odom.rviz
ca_tools/scripts/: move_square.py
ca_twist_mux/: CMakeLists.txt  package.xml
ca_twist_mux/config/: velocities.yaml
ca_twist_mux/launch/: twist_mux.launch
docker/: launch_docker.sh
docker/create_gazebo9/: Dockerfile
docker/create_kinetic_nvidia/: Dockerfile
docker/create_melodic_nvidia/: Dockerfile
docker/create_ros_melodic/: Dockerfile
docker/create_ros_melodic_gazebo9/: Dockerfile  dependencies.repos  packages.txt
navigation/ca_localization/config/: ekf_angle.yaml  ekf_imu.yaml  ekf_localization.yaml  ekf_odom.yaml  ekf_scan_matcher.yaml
navigation/ca_localization/launch/: localize.launch
navigation/ca_move_base/: CMakeLists.txt  package.xml
navigation/ca_move_base/config/: controllers.yaml  jps_global_planner_params.yaml  planners.yaml  teb_local_planner_params.yaml
navigation/ca_move_base/launch/: move_base.launch  move_base_flex.launch  navigate.launch
navigation/ca_move_base/scripts/: mbf_move_base_action.py  wait_for_goal.py
navigation/ca_planning/: CMakeLists.txt  README.md  package.xml
navigation/ca_planning/include/ca_planning/: dmp.h  graph_search.h  jps_ros.h  navfn.h
navigation/ca_planning/include/ca_planning/jps_basis/: data_type.h  data_utils.h
navigation/ca_planning/include/ca_planning/jps_collision/: map_util.h
navigation/ca_planning/include/ca_planning/jps_planner/: jps_planner.h
navigation/ca_planning/plugins/: jsp_planner_plugin.xml
navigation/ca_planning/src/: dmp.cpp  graph_search.cpp  jps_node.cpp  jps_ros.cpp  navfn.cpp
navigation/ca_planning/src/jps_planner/: graph_search.cpp  jps_planner.cpp
navigation/ca_swarm/: CMakeLists.txt
navigation/ca_swarm/config/: dwa_local_planner_params.yaml
navigation/ca_swarm/scripts/: box_client.py  swarm_controller_node
navigation/ca_visual_odometry/config/: viso2.yaml
navigation/ca_visual_odometry/launch/: calibrate.launch  cam_mapping.launch  vo_raspicam.launch
sensors/ca_camera/config/: rplidar.yaml
sensors/ca_camera/launch/: rplidar_a2.launch
sensors/ca_camera3d/: CMakeLists.txt  package.xml
sensors/ca_camera3d/config/: asus_xtion_pro.yaml
sensors/ca_camera3d/launch/: asus_xtion_pro.launch
sensors/ca_camera3d/models/asus_xtion_pro/: model.config  model.sdf
sensors/ca_imu/: CMakeLists.txt  package.xml
sensors/ca_imu/config/: create1.ini
sensors/ca_imu/launch/: mpu9255.launch  testing.launch
