<?xml version="1.0"?>
<package format="2">
  <name>ca_move_base</name>
  <version>0.0.0</version>
  <description>The ca_move_base package</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>actionlib</depend>
  <depend>amcl</depend>
  <depend>map_server</depend>
  <depend>move_base</depend>
  <depend>move_base_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

  <exec_depend>mbf_simple_nav</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  
  <exec_depend>sbpl_lattice_planner</exec_depend>
  <exec_depend>global_planner</exec_depend>

  <exec_depend>eband_local_planner</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>

  <exec_depend>rotate_recovery</exec_depend>
  <exec_depend>clear_costmap_recovery</exec_depend>
  <exec_depend>moveback_recovery</exec_depend>

  <export></export>
</package>
