<?xml version="1.0"?>
<package format="2">
  <name>ca_camera3d</name>
  <version>0.0.1</version>
  <description>The ca_camera3d package</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>depthimage_to_laserscan</depend>
  <depend>openni2_launch</depend>

  <export></export>
</package>
